force-app/main/default/objects/SM_SB_Queue_Inbound__c/fields/SM_Record_to_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>SM_Record_to_Dispatch__c</fullName>
    <description>This field stores the SFDC record id of the record which is being synced from Service Board.</description>
    <label>Record to Dispatch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>