force-app/main/default/objects/SM_SB_Queue_Inbound__c/fields/SM_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_Status__c</fullName>
    <description>The status of the record which was tried to send from Service Board to SFDC.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>